# conan-recipes

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.patch  LICENSE  README.md  appveyor.yml  build.py  conanfile.py  install_mac.sh
alut/: CMakeLists.txt  conanfile.py
cegui/: .travis.yml  CMakeLists.txt  README.md  conanfile.py
cegui/patches/cegui/src/ImageCodecModules/FreeImage/: CMakeLists.txt.patch
cegui/patches/cegui/src/ImageCodecModules/SDL2/: CMakeLists.txt.patch
cegui/patches/cmake/: FindOgre.cmake.patch
cegui/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
cg/: conanfile.py
cg/test_package/: CMakeLists.txt
lua/: CMakeLists.txt.patch
lua/test_package/: CMakeLists.txt  test_package.c
luabind11/: conanfile.py
ode/: CMakeLists.txt  README.md  conanfile.py
ode/test_package/: CMakeLists.txt  example.cpp
ogre/: conanfile.py
ogre/patches/: CMakeLists.txt.patch
ogre/test_package/: CMakeLists.txt
patches/cegui/src/: CMakeLists.txt.patch
sdl_gpu/: build.py  conanfile.py  config.yml
sdl_gpu/all/: conandata.yml  conanfile.py
sdl_gpu/all/test_package/: CMakeLists.txt  test_package.c
sdl_mixer/: CMakeLists.txt  LICENSE.md  conanfile.py
sdl_mixer/test_package/: CMakeLists.txt  test_package.cpp
smpeg/: CMakeLists.txt  README.md  build.py  conanfile.py
smpeg/test_package/: test_package.cpp
stdexec/: config.yml
stdexec/all/: conandata.yml  conanfile.py
stdexec/all/test_package/: CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  example.c  example.cpp  hello.lua  test_package.c  test_package.cpp
